# among_us_bot

./: .dockerignore  Dockerfile  pyproject.toml  tg.py
configs/: env_config.py
data/: tasks.json
src/: game_state.py  handlers.py  keyboards.py  task_manager.py  tasks.py
src/model/: game.py
ui/: old_tg.py  tg.py
